--- a/TravelPics.UI/package.json
+++ b/TravelPics.UI/package.json
@@ -18,9 +18,14 @@
         "@angular/platform-browser": "^15.2.0",
         "@angular/platform-browser-dynamic": "^15.2.0",
         "@angular/router": "^15.2.0",
+        "@fortawesome/angular-fontawesome": "^0.12.1",
+        "@fortawesome/fontawesome-free": "^6.3.0",
+        "angular-font-awesome": "^3.1.2",
+        "font-awesome": "^4.7.0",
+        "primeflex": "^3.3.0",
         "primeicons": "^6.0.1",
         "primeng": "^15.2.0",
-        "rxjs": "~7.5.0",
+        "rxjs": "^6.5.3 || ^7.8.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.11.4"
     },
