--- a/TravelPics.UI/package.json
+++ b/TravelPics.UI/package.json
@@ -1,11 +1,17 @@
 {
-    "name": "travel-pics.ui",
+    "name": "travelpics.ui",
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "watch": "ng build --watch --configuration development",
+        "start": "ng serve --port 45000 -c=travelpics-dev",
+        "start-local": "ng serve --port 45001 -c=travelpics-local",
+        "start-dev": "ng serve --port 45001 -c=travelpics-dev",
+        "start-prod": "ng serve --port 45000 -c=travelpics-prod",
+        "build": "ng build -c=travelpics-dev",
+        "build-local": "ng build -c=travelpics-local",
+        "build-dev": "ng build -c=travelpics-dev",
+        "build-prod": "ng build -c=travelpics-prod",
+        "watch": "ng build --watch --configuration travelpics-dev",
         "test": "ng test"
     },
     "private": true,
@@ -22,6 +28,7 @@
         "@fortawesome/fontawesome-free": "^6.3.0",
         "angular-font-awesome": "^3.1.2",
         "font-awesome": "^4.7.0",
+        "moment": "^2.29.4",
         "primeflex": "^3.3.0",
         "primeicons": "^6.0.1",
         "primeng": "^15.2.0",
