--- a/TravelPics.UI/package.json
+++ b/TravelPics.UI/package.json
@@ -24,6 +24,7 @@
         "@angular/platform-browser": "^15.2.0",
         "@angular/platform-browser-dynamic": "^15.2.0",
         "@angular/router": "^15.2.0",
+        "@auth0/angular-jwt": "^5.1.2",
         "@fortawesome/angular-fontawesome": "^0.12.1",
         "@fortawesome/fontawesome-free": "^6.3.0",
         "angular-font-awesome": "^3.1.2",
