--- a/TravelPics.UI/tsconfig.json
+++ b/TravelPics.UI/tsconfig.json
@@ -16,10 +16,10 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "ES2022",
-    "module": "es2020",
+    "target": "es6",
+    "module": "es6",
     "lib": [
-      "es2020",
+      "es6",
       "dom"
     ],
     "useDefineForClassFields": false
