--- a/API/TravelPics.Dashboard.API/TravelPics.Documents/TravelPics.Documents.csproj
+++ b/API/TravelPics.Dashboard.API/TravelPics.Documents/TravelPics.Documents.csproj
@@ -13,6 +13,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.15.1" />
+    <PackageReference Include="Polly" Version="7.2.3" />
   </ItemGroup>
 
 </Project>
