--- a/.gitignore
+++ b/.gitignore
@@ -363,128 +363,5 @@ MigrationBackup/
 FodyWeavers.xsd
 
 .vs/
-bin/
-obj/
-API/TravelPics.Dashboard.API/.vs/TravelPics.Dashboard.API/v17/.suo
-API/TravelPics.Dashboard.API/.vs/TravelPics.Dashboard.API/config/applicationhost.config
-API/TravelPics.Dashboard.API/.vs/TravelPics.Dashboard.API/v17/.suo
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Dashboard.API.dll
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Dashboard.API.exe
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Dashboard.API.pdb
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Documents.Abstraction.dll
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Documents.Abstraction.pdb
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Documents.dll
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Documents.pdb
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Domains.dll
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Domains.pdb
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Security.dll
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Security.pdb
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Users.Abstraction.dll
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Users.Abstraction.pdb
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Users.dll
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/bin/Debug/net6.0/TravelPics.Users.pdb
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/obj/Debug/net6.0/apphost.exe
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/obj/Debug/net6.0/TravelPics.Dashboard.API.assets.cache
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/obj/Debug/net6.0/TravelPics.Dashboard.API.csproj.AssemblyReference.cache
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/obj/Debug/net6.0/TravelPics.Dashboard.API.csproj.CoreCompileInputs.cache
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/obj/Debug/net6.0/TravelPics.Dashboard.API.csproj.FileListAbsolute.txt
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/obj/Debug/net6.0/TravelPics.Dashboard.API.dll
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/obj/Debug/net6.0/TravelPics.Dashboard.API.GeneratedMSBuildEditorConfig.editorconfig
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/obj/Debug/net6.0/TravelPics.Dashboard.API.genruntimeconfig.cache
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/obj/Debug/net6.0/TravelPics.Dashboard.API.pdb
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/obj/project.assets.json
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/obj/project.nuget.cache
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/obj/TravelPics.Dashboard.API.csproj.nuget.dgspec.json
-API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/obj/TravelPics.Dashboard.API.csproj.nuget.g.props
-API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/bin/Debug/net6.0/TravelPics.Documents.Abstraction.dll
-API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/bin/Debug/net6.0/TravelPics.Documents.Abstraction.pdb
-API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/obj/Debug/net6.0/TravelPics.Documents.Abstraction.assets.cache
-API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/obj/Debug/net6.0/TravelPics.Documents.Abstraction.csproj.AssemblyReference.cache
-API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/obj/Debug/net6.0/TravelPics.Documents.Abstraction.csproj.CoreCompileInputs.cache
-API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/obj/Debug/net6.0/TravelPics.Documents.Abstraction.csproj.FileListAbsolute.txt
-API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/obj/Debug/net6.0/TravelPics.Documents.Abstraction.dll
-API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/obj/Debug/net6.0/TravelPics.Documents.Abstraction.GeneratedMSBuildEditorConfig.editorconfig
-API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/obj/Debug/net6.0/TravelPics.Documents.Abstraction.pdb
-API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/obj/project.assets.json
-API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/obj/project.nuget.cache
-API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/obj/TravelPics.Documents.Abstraction.csproj.nuget.dgspec.json
-API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/obj/TravelPics.Documents.Abstraction.csproj.nuget.g.props
-API/TravelPics.Dashboard.API/TravelPics.Documents/bin/Debug/net6.0/TravelPics.Documents.Abstraction.dll
-API/TravelPics.Dashboard.API/TravelPics.Documents/bin/Debug/net6.0/TravelPics.Documents.Abstraction.pdb
-API/TravelPics.Dashboard.API/TravelPics.Documents/bin/Debug/net6.0/TravelPics.Documents.dll
-API/TravelPics.Dashboard.API/TravelPics.Documents/bin/Debug/net6.0/TravelPics.Documents.pdb
-API/TravelPics.Dashboard.API/TravelPics.Documents/bin/Debug/net6.0/TravelPics.Domains.dll
-API/TravelPics.Dashboard.API/TravelPics.Documents/bin/Debug/net6.0/TravelPics.Domains.pdb
-API/TravelPics.Dashboard.API/TravelPics.Documents/obj/Debug/net6.0/TravelPics.Documents.assets.cache
-API/TravelPics.Dashboard.API/TravelPics.Documents/obj/Debug/net6.0/TravelPics.Documents.csproj.AssemblyReference.cache
-API/TravelPics.Dashboard.API/TravelPics.Documents/obj/Debug/net6.0/TravelPics.Documents.csproj.CoreCompileInputs.cache
-API/TravelPics.Dashboard.API/TravelPics.Documents/obj/Debug/net6.0/TravelPics.Documents.csproj.FileListAbsolute.txt
-API/TravelPics.Dashboard.API/TravelPics.Documents/obj/Debug/net6.0/TravelPics.Documents.dll
-API/TravelPics.Dashboard.API/TravelPics.Documents/obj/Debug/net6.0/TravelPics.Documents.GeneratedMSBuildEditorConfig.editorconfig
-API/TravelPics.Dashboard.API/TravelPics.Documents/obj/Debug/net6.0/TravelPics.Documents.pdb
-API/TravelPics.Dashboard.API/TravelPics.Documents/obj/project.assets.json
-API/TravelPics.Dashboard.API/TravelPics.Documents/obj/project.nuget.cache
-API/TravelPics.Dashboard.API/TravelPics.Documents/obj/TravelPics.Documents.csproj.nuget.dgspec.json
-API/TravelPics.Dashboard.API/TravelPics.Documents/obj/TravelPics.Documents.csproj.nuget.g.props
-API/TravelPics.Dashboard.API/TravelPics.Domains/bin/Debug/net6.0/TravelPics.Domains.dll
-API/TravelPics.Dashboard.API/TravelPics.Domains/bin/Debug/net6.0/TravelPics.Domains.pdb
-API/TravelPics.Dashboard.API/TravelPics.Domains/obj/Debug/net6.0/TravelPics.Domains.assets.cache
-API/TravelPics.Dashboard.API/TravelPics.Domains/obj/Debug/net6.0/TravelPics.Domains.csproj.AssemblyReference.cache
-API/TravelPics.Dashboard.API/TravelPics.Domains/obj/Debug/net6.0/TravelPics.Domains.csproj.CoreCompileInputs.cache
-API/TravelPics.Dashboard.API/TravelPics.Domains/obj/Debug/net6.0/TravelPics.Domains.csproj.FileListAbsolute.txt
-API/TravelPics.Dashboard.API/TravelPics.Domains/obj/Debug/net6.0/TravelPics.Domains.dll
-API/TravelPics.Dashboard.API/TravelPics.Domains/obj/Debug/net6.0/TravelPics.Domains.GeneratedMSBuildEditorConfig.editorconfig
-API/TravelPics.Dashboard.API/TravelPics.Domains/obj/Debug/net6.0/TravelPics.Domains.genruntimeconfig.cache
-API/TravelPics.Dashboard.API/TravelPics.Domains/obj/Debug/net6.0/TravelPics.Domains.pdb
-API/TravelPics.Dashboard.API/TravelPics.Domains/obj/project.assets.json
-API/TravelPics.Dashboard.API/TravelPics.Domains/obj/project.nuget.cache
-API/TravelPics.Dashboard.API/TravelPics.Domains/obj/TravelPics.Domains.csproj.nuget.dgspec.json
-API/TravelPics.Dashboard.API/TravelPics.Domains/obj/TravelPics.Domains.csproj.nuget.g.props
-API/TravelPics.Dashboard.API/TravelPics.Security/bin/Debug/net6.0/TravelPics.Domains.dll
-API/TravelPics.Dashboard.API/TravelPics.Security/bin/Debug/net6.0/TravelPics.Domains.pdb
-API/TravelPics.Dashboard.API/TravelPics.Security/bin/Debug/net6.0/TravelPics.Security.dll
-API/TravelPics.Dashboard.API/TravelPics.Security/bin/Debug/net6.0/TravelPics.Security.pdb
-API/TravelPics.Dashboard.API/TravelPics.Security/bin/Debug/net6.0/TravelPics.Users.Abstraction.dll
-API/TravelPics.Dashboard.API/TravelPics.Security/bin/Debug/net6.0/TravelPics.Users.Abstraction.pdb
-API/TravelPics.Dashboard.API/TravelPics.Security/obj/Debug/net6.0/TravelPics.Security.assets.cache
-API/TravelPics.Dashboard.API/TravelPics.Security/obj/Debug/net6.0/TravelPics.Security.csproj.AssemblyReference.cache
-API/TravelPics.Dashboard.API/TravelPics.Security/obj/Debug/net6.0/TravelPics.Security.csproj.CoreCompileInputs.cache
-API/TravelPics.Dashboard.API/TravelPics.Security/obj/Debug/net6.0/TravelPics.Security.csproj.FileListAbsolute.txt
-API/TravelPics.Dashboard.API/TravelPics.Security/obj/Debug/net6.0/TravelPics.Security.dll
-API/TravelPics.Dashboard.API/TravelPics.Security/obj/Debug/net6.0/TravelPics.Security.GeneratedMSBuildEditorConfig.editorconfig
-API/TravelPics.Dashboard.API/TravelPics.Security/obj/Debug/net6.0/TravelPics.Security.pdb
-API/TravelPics.Dashboard.API/TravelPics.Security/obj/project.assets.json
-API/TravelPics.Dashboard.API/TravelPics.Security/obj/project.nuget.cache
-API/TravelPics.Dashboard.API/TravelPics.Security/obj/TravelPics.Security.csproj.nuget.dgspec.json
-API/TravelPics.Dashboard.API/TravelPics.Security/obj/TravelPics.Security.csproj.nuget.g.props
-API/TravelPics.Dashboard.API/TravelPics.Users.Abstraction/bin/Debug/net6.0/TravelPics.Users.Abstraction.dll
-API/TravelPics.Dashboard.API/TravelPics.Users.Abstraction/bin/Debug/net6.0/TravelPics.Users.Abstraction.pdb
-API/TravelPics.Dashboard.API/TravelPics.Users.Abstraction/obj/Debug/net6.0/TravelPics.Users.Abstraction.assets.cache
-API/TravelPics.Dashboard.API/TravelPics.Users.Abstraction/obj/Debug/net6.0/TravelPics.Users.Abstraction.csproj.AssemblyReference.cache
-API/TravelPics.Dashboard.API/TravelPics.Users.Abstraction/obj/Debug/net6.0/TravelPics.Users.Abstraction.csproj.CoreCompileInputs.cache
-API/TravelPics.Dashboard.API/TravelPics.Users.Abstraction/obj/Debug/net6.0/TravelPics.Users.Abstraction.csproj.FileListAbsolute.txt
-API/TravelPics.Dashboard.API/TravelPics.Users.Abstraction/obj/Debug/net6.0/TravelPics.Users.Abstraction.dll
-API/TravelPics.Dashboard.API/TravelPics.Users.Abstraction/obj/Debug/net6.0/TravelPics.Users.Abstraction.GeneratedMSBuildEditorConfig.editorconfig
-API/TravelPics.Dashboard.API/TravelPics.Users.Abstraction/obj/Debug/net6.0/TravelPics.Users.Abstraction.pdb
-API/TravelPics.Dashboard.API/TravelPics.Users.Abstraction/obj/project.assets.json
-API/TravelPics.Dashboard.API/TravelPics.Users.Abstraction/obj/project.nuget.cache
-API/TravelPics.Dashboard.API/TravelPics.Users.Abstraction/obj/TravelPics.Users.Abstraction.csproj.nuget.dgspec.json
-API/TravelPics.Dashboard.API/TravelPics.Users.Abstraction/obj/TravelPics.Users.Abstraction.csproj.nuget.g.props
-API/TravelPics.Dashboard.API/TravelPics.Users/bin/Debug/net6.0/TravelPics.Domains.dll
-API/TravelPics.Dashboard.API/TravelPics.Users/bin/Debug/net6.0/TravelPics.Domains.pdb
-API/TravelPics.Dashboard.API/TravelPics.Users/bin/Debug/net6.0/TravelPics.Users.Abstraction.dll
-API/TravelPics.Dashboard.API/TravelPics.Users/bin/Debug/net6.0/TravelPics.Users.Abstraction.pdb
-API/TravelPics.Dashboard.API/TravelPics.Users/bin/Debug/net6.0/TravelPics.Users.dll
-API/TravelPics.Dashboard.API/TravelPics.Users/bin/Debug/net6.0/TravelPics.Users.pdb
-API/TravelPics.Dashboard.API/TravelPics.Users/obj/Debug/net6.0/TravelPics.Users.assets.cache
-API/TravelPics.Dashboard.API/TravelPics.Users/obj/Debug/net6.0/TravelPics.Users.csproj.AssemblyReference.cache
-API/TravelPics.Dashboard.API/TravelPics.Users/obj/Debug/net6.0/TravelPics.Users.csproj.CoreCompileInputs.cache
-API/TravelPics.Dashboard.API/TravelPics.Users/obj/Debug/net6.0/TravelPics.Users.csproj.FileListAbsolute.txt
-API/TravelPics.Dashboard.API/TravelPics.Users/obj/Debug/net6.0/TravelPics.Users.dll
-API/TravelPics.Dashboard.API/TravelPics.Users/obj/Debug/net6.0/TravelPics.Users.GeneratedMSBuildEditorConfig.editorconfig
-API/TravelPics.Dashboard.API/TravelPics.Users/obj/Debug/net6.0/TravelPics.Users.pdb
-API/TravelPics.Dashboard.API/TravelPics.Users/obj/project.assets.json
-API/TravelPics.Dashboard.API/TravelPics.Users/obj/project.nuget.cache
-API/TravelPics.Dashboard.API/TravelPics.Users/obj/TravelPics.Users.csproj.nuget.dgspec.json
-API/TravelPics.Dashboard.API/TravelPics.Users/obj/TravelPics.Users.csproj.nuget.g.props
-*.cache
+**/bin/
+**/obj/
