--- a/API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/TravelPics.Dashboard.API.csproj
+++ b/API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/TravelPics.Dashboard.API.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TravelPics.Documents.Abstraction\TravelPics.Documents.Abstraction.csproj" />
     <ProjectReference Include="..\TravelPics.Documents\TravelPics.Documents.csproj" />
     <ProjectReference Include="..\TravelPics.Domains\TravelPics.Domains.csproj" />
     <ProjectReference Include="..\TravelPics.Security\TravelPics.Security.csproj" />
