--- a/TravelPics.UI/package.json
+++ b/TravelPics.UI/package.json
@@ -16,11 +16,13 @@
     },
     "private": true,
     "dependencies": {
+        "@agm/core": "^1.1.0",
         "@angular/animations": "^15.2.0",
         "@angular/common": "^15.2.0",
         "@angular/compiler": "^15.2.0",
         "@angular/core": "^15.2.0",
         "@angular/forms": "^15.2.0",
+        "@angular/google-maps": "^15.2.8",
         "@angular/platform-browser": "^15.2.0",
         "@angular/platform-browser-dynamic": "^15.2.0",
         "@angular/router": "^15.2.0",
@@ -41,6 +43,7 @@
         "@angular-devkit/build-angular": "^15.2.0",
         "@angular/cli": "^15.2.0",
         "@angular/compiler-cli": "^15.2.0",
+        "@types/googlemaps": "^3.43.3",
         "@types/jasmine": "~3.10.0",
         "@types/node": "^12.11.1",
         "jasmine-core": "~3.10.0",
