--- a/API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/TravelPics.Dashboard.API.csproj
+++ b/API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/TravelPics.Dashboard.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
@@ -27,6 +28,9 @@
     <ProjectReference Include="..\TravelPics.Documents.Abstraction\TravelPics.Documents.Abstraction.csproj" />
     <ProjectReference Include="..\TravelPics.Documents\TravelPics.Documents.csproj" />
     <ProjectReference Include="..\TravelPics.Domains\TravelPics.Domains.csproj" />
+    <ProjectReference Include="..\TravelPics.Location\TravelPics.Locations.csproj" />
+    <ProjectReference Include="..\TravelPics.Posts.Abstraction\TravelPics.Posts.Abstraction.csproj" />
+    <ProjectReference Include="..\TravelPics.Posts\TravelPics.Posts.csproj" />
     <ProjectReference Include="..\TravelPics.Security\TravelPics.Security.csproj" />
     <ProjectReference Include="..\TravelPics.Users\TravelPics.Users.csproj" />
   </ItemGroup>
