Add post feature and upload to cloud and DB

--- a/API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/TravelPics.Documents.Abstraction.csproj
+++ b/API/TravelPics.Dashboard.API/TravelPics.Documents.Abstraction/TravelPics.Documents.Abstraction.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TravelPics.Domains\TravelPics.Domains.csproj" />
+  </ItemGroup>
+
 </Project>
