--- a/API/TravelPics.Dashboard.API/TravelPics.Posts/TravelPics.Posts.csproj
+++ b/API/TravelPics.Dashboard.API/TravelPics.Posts/TravelPics.Posts.csproj
@@ -16,4 +16,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Polly" Version="7.2.3" />
+  </ItemGroup>
+
 </Project>
