Update architecture for separate abstraction

--- a/API/TravelPics.Dashboard.API/TravelPics.Abstractions/TravelPics.Abstractions.csproj
+++ b/API/TravelPics.Dashboard.API/TravelPics.Abstractions/TravelPics.Abstractions.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TravelPics.Abstractions\TravelPics.Abstractions.csproj" />
+    <ProjectReference Include="..\TravelPics.Domains\TravelPics.Domains.csproj" />
   </ItemGroup>
 
 </Project>
