--- a/API/TravelPics.Dashboard.API/TravelPics.Documents/TravelPics.Documents.csproj
+++ b/API/TravelPics.Dashboard.API/TravelPics.Documents/TravelPics.Documents.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TravelPics.Documents.Abstraction\TravelPics.Documents.Abstraction.csproj" />
+    <ProjectReference Include="..\TravelPics.Abstractions\TravelPics.Abstractions.csproj" />
     <ProjectReference Include="..\TravelPics.Domains\TravelPics.Domains.csproj" />
   </ItemGroup>
 
