--- a/API/TravelPics.Dashboard.API/TravelPics.Location/TravelPics.Locations.csproj
+++ b/API/TravelPics.Dashboard.API/TravelPics.Location/TravelPics.Locations.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TravelPics.Abstractions\TravelPics.Abstractions.csproj" />
     <ProjectReference Include="..\TravelPics.Domains\TravelPics.Domains.csproj" />
-    <ProjectReference Include="..\TravelPics.Location.Abstraction\TravelPics.Locations.Abstraction.csproj" />
   </ItemGroup>
 
 </Project>
