--- a/API/TravelPics.MessageClient/TravelPics.MessageClient.csproj
+++ b/API/TravelPics.MessageClient/TravelPics.MessageClient.csproj
@@ -8,9 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
 
 </Project>
