--- a/API/TravelPics.Notifications/TravelPics.Notifications/TravelPics.Notifications.csproj
+++ b/API/TravelPics.Notifications/TravelPics.Notifications/TravelPics.Notifications.csproj
@@ -10,15 +10,18 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+	<PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\TravelPics.Dashboard.API\TravelPics.Notifications.Core\TravelPics.Notifications.Core.csproj" />
     <ProjectReference Include="..\..\TravelPics.MessageClient\TravelPics.MessageClient.csproj" />
+    <ProjectReference Include="..\TravelPics.Notifications.Processors\TravelPics.Notifications.Processors.csproj" />
   </ItemGroup>
 
 </Project>
