--- a/API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/TravelPics.Dashboard.API.csproj
+++ b/API/TravelPics.Dashboard.API/TravelPics.Dashboard.API/TravelPics.Dashboard.API.csproj
@@ -29,6 +29,7 @@
     <ProjectReference Include="..\TravelPics.Documents\TravelPics.Documents.csproj" />
     <ProjectReference Include="..\TravelPics.Domains\TravelPics.Domains.csproj" />
     <ProjectReference Include="..\TravelPics.Location\TravelPics.Locations.csproj" />
+    <ProjectReference Include="..\TravelPics.LookupItems\TravelPics.LookupItems.csproj" />
     <ProjectReference Include="..\TravelPics.Notifications.Core\TravelPics.Notifications.Core.csproj" />
     <ProjectReference Include="..\TravelPics.Posts\TravelPics.Posts.csproj" />
     <ProjectReference Include="..\TravelPics.Security\TravelPics.Security.csproj" />
