--- a/API/Dockerfile_notifications
+++ b/API/Dockerfile_notifications
@@ -18,10 +18,10 @@ COPY ["TravelPics.Dashboard.API/TravelPics.Notifications.Core/TravelPics.Notific
 COPY ["TravelPics.Dashboard.API/TravelPics.Users/TravelPics.Users.csproj", "TravelPics.Users/"]
 COPY ["TravelPics.MessageClient/TravelPics.MessageClient.csproj", "TravelPics.MessageClient/"]
 
-RUN dotnet restore "TravelPics.Notifications/TravelPics.Notifications/TravelPics.Notifications.csproj"
+RUN dotnet restore "TravelPics.Notifications/TravelPics.Notifications.csproj"
 COPY . .
 WORKDIR "/src/TravelPics.Notifications"
-RUN dotnet build "TravelPics.Notifications.csproj" -c Release -o /app/build
+RUN dotnet build "TravelPics.Notifications/TravelPics.Notifications.csproj" -c Release -o /app/build
 
 FROM build AS publish
 RUN dotnet publish "TravelPics.Notifications.csproj" -c Release -o /app/publish /p:UseAppHost=false
