--- a/TravelPics.UI/Dockerfile
+++ b/TravelPics.UI/Dockerfile
@@ -9,15 +9,19 @@ RUN npm install -g npm@8.10.0
 RUN npm ci
 #Copy the file from current directory to Workingdirectory
 COPY . .
+#RUN npm run build-dev
 
 RUN npm run build-dev
 
 #Create the nginx stage fr serving the content
 FROM nginx:alpine
-#Set the working directory to nginx assets directory
+# Set the working directory to nginx assets directory
 WORKDIR /usr/share/nginx/html
+
 #Remove the default nginx static files
 RUN rm -rf ./*
+
+COPY ./config/nginx-custom.conf /etc/nginx/conf.d/default.conf
 #Copy the static content from the builder stage
 COPY --from=builder /app/dist/travelpics.ui .
 #Container run the nginx with global directive and Daemmon off
