update final dockerfile

--- a/TravelPics.UI/Dockerfile
+++ b/TravelPics.UI/Dockerfile
@@ -5,11 +5,10 @@ WORKDIR /app
 
 COPY package.json package-lock.json ./
 #Run npm install & build the application
-RUN npm install -g npm@8.10.0
-RUN npm ci
+RUN npm install -g npm@9.6.7
+RUN npm ci --force
 #Copy the file from current directory to Workingdirectory
 COPY . .
-#RUN npm run build-dev
 
 RUN npm run build-dev
 
@@ -23,5 +22,5 @@ RUN rm -rf ./*
 
 COPY ./config/nginx-custom.conf /etc/nginx/conf.d/default.conf
 #Copy the static content from the builder stage
-COPY --from=builder /app/dist/travelpics.ui .
+COPY --from=builder /app/dist/travel-pics.ui .
 #Container run the nginx with global directive and Daemmon off
